[gd_scene load_steps=5 format=3 uid="uid://syewcoe1n7wo"]

[ext_resource type="Script" uid="uid://bmq58oxyodnda" path="res://Scripts/skateboard.gd" id="1_bdq6d"]
[ext_resource type="Texture2D" uid="uid://ddxrwtquwe11u" path="res://Sprites/General Sprites/Skateboard Sheet.png" id="1_tbxs0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pyqio"]
resource_local_to_scene = true
size = Vector2(92, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bige3"]
resource_local_to_scene = true
size = Vector2(68, 19)

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(0, -11)
collision_layer = 64
collision_mask = 73
floor_stop_on_slope = false
floor_constant_speed = true
floor_snap_length = 10.0
script = ExtResource("1_bdq6d")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, -24)
texture = ExtResource("1_tbxs0")
hframes = 3
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 17.5)
shape = SubResource("RectangleShape2D_pyqio")

[node name="SkateboardEnzoDetector" type="Area2D" parent="." groups=["Skateboard"]]
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkateboardEnzoDetector"]
shape = SubResource("RectangleShape2D_bige3")
debug_color = Color(0, 0.647059, 0.180392, 0.419608)

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[connection signal="area_entered" from="SkateboardEnzoDetector" to="." method="_on_enzo_detector_area_entered"]
[connection signal="area_exited" from="SkateboardEnzoDetector" to="." method="_on_enzo_detector_area_exited"]
